--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -88,5 +88,5 @@ jobs:
           Repository: ${{ github.repository }}
 
           See changes: https://github.com/${{ github.repository }}/commit/${{github.sha}}
-        documents: downloads/report.xml
+        document: downloads/report.xml
     
