--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,7 +76,7 @@ jobs:
         asset_name: ${{ env.RELEASE_VERSION }}.zip
         asset_content_type: applications/zip
         
-    - name: send telegram message on push
+    - name: send report xml on push
       uses: appleboy/telegram-action@master
       with:
         to: ${{ secrets.TELEGRAM_TO }}
@@ -89,4 +89,11 @@ jobs:
 
           See changes: https://github.com/${{ github.repository }}/commit/${{github.sha}}
         document: downloads/report.xml
+        
+    - name: send report xml on push
+      uses: appleboy/telegram-action@master
+      with:
+        to: ${{ secrets.TELEGRAM_TO }}
+        token: ${{ secrets.TELEGRAM_TOKEN }}
+        document: ${{ env.RELEASE_VERSION }}.zip
     
