--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -100,5 +100,5 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        document: NewReleases.zip
+        document: releases/NewReleases.zip
     
