--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -100,5 +100,7 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
+        message: |
+          Files will be downloadable below.
         document: releases/NewReleases.zip
     
