--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,7 +65,7 @@ jobs:
     - name: Archive site content
       uses: thedoctor0/zip-release@master
       with:
-        filename: content.zip
+        filename: ${{ env.RELEASE_VERSION }}.zip
     
     - name: upload release asset
       uses: actions/upload-release-asset@v1
@@ -73,7 +73,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN}}
       with:
         upload_url: ${{ steps.create-new-release.outputs.upload_url }}
-        asset_path: ./content.zip
+        asset_path: ./${{ env.RELEASE_VERSION }}.zip
         asset_name: ${{ env.RELEASE_VERSION }}.zip
         asset_content_type: applications/zip
         
