--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -39,3 +39,22 @@ jobs:
         #   disable-autolabeler: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          template: |
+            ## What’s Changed
+            $CHANGES
+
+            $CONTRIBUTORS
+
+            $PREVIOUS_TAG
+
+            $REPOSITORY
+
+
+            categories:
+              - title: '🚀 Features'
+                label: 'feature'
+              - title: '🐛 Bug Fixes'
+                labels:
+                  - 'fix'
+                  - 'bugfix'
+                  - 'bug'
