--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,30 +1,102 @@
-name: Create Release
-
-on:
+name: Release
+on: 
   push:
     tags:
-      - '*'
+      - 'v*'
 
 jobs:
-  create-release:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+    - uses: actions/checkout@v2
+      with:
+        python-version: 3.11
+    - name: Install Libraries
+      run: |
+        pip install flake8 pytest pytest-cov
+        
+    - name: Checkout Own Repo
+      uses: actions/checkout@v2
+      with:
+        repository: JayNg96/CICD-Pipeline
+        
+    - name: test with pytest
+      run: |
+        pytest test.py -v -cov --junitxml=report.xml
+    - if: ${{ failure() }}
+      uses: JasonEtco/create-an-issue@v2
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        filename: .github/ISSUE_TEMPLATE.md
+  
+    - name: Publish Test Results
+      uses: EnricoMi/publish-unit-test-result-action/composite@v2
+      if: always()
+      with:
+        junit_files: "report.xml"
+    - name: create folder
+      run: mkdir downloads
+    
+    - name: move files
+      run: mv *.xml ./downloads
+      
+    - name: Upload document
+      uses: actions/upload-artifact@v2
+      with: 
+        name: assetDocuments
+        path: downloads
+        
+    - name: Set environment version
+      run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+    - name: download remote information
+      uses: actions/download-artifact@v2
+      with:
+        name: assetDocuments
+        
+    - name: create release
+      id: create-new-release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      with:
+        tag_name: ${{ env.RELEASE_VERSION }}
+        release_name: Release ${{env.RELEASE_VERSION }}
+    - name: Archive site content
+      uses: thedoctor0/zip-release@master
+      with:
+        filename: ${{ env.RELEASE_VERSION }}.zip
+    
+    - name: upload release asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN}}
+      with:
+        upload_url: ${{ steps.create-new-release.outputs.upload_url }}
+        asset_path: ./${{ env.RELEASE_VERSION }}.zip
+        asset_name: ${{ env.RELEASE_VERSION }}.zip
+        asset_content_type: applications/zip
+        
+    - name: send report xml on push
+      uses: appleboy/telegram-action@master
+      with:
+        to: ${{ secrets.TELEGRAM_TO }}
+        token: ${{ secrets.TELEGRAM_TOKEN }}
+        message: |
+          ${{ github.actor }} created a new release: ${{ env.RELEASE_VERSION }}
+          Commit message: ${{ github.event.commits[0].message }}
 
-      - name: Create changelog text
-        id: changelog
-        uses: loopwerk/tag-changelog@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          exclude_types: other,doc,chore
+          Repository: ${{ github.repository }}
 
-      - name: Create release
-        uses: actions/create-release@latest
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          body: ${{ steps.changelog.outputs.changes }}
+          See changes: https://github.com/${{ github.repository }}/commit/${{github.sha}}
+        document: downloads/report.xml
+        
+    - name: send zip on push
+      uses: appleboy/telegram-action@master
+      with:
+        to: ${{ secrets.TELEGRAM_TO }}
+        token: ${{ secrets.TELEGRAM_TOKEN }}
+        message: |
+          Files Version ${{ env.RELEASE_VERSION }}.zip will be downloadable below.
+        document: ${{ env.RELEASE_VERSION }}.zip
+    
