--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,6 +54,13 @@ jobs:
       with:
         name: assetDocuments
         
+    - name: Create changelog text
+      id: changelog
+      uses: loopwerk/tag-changelog@v1
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        exclude_types: other,perf
+          
     - name: create release
       id: create-new-release
       uses: actions/create-release@v1
@@ -62,6 +69,27 @@ jobs:
       with:
         tag_name: ${{ env.RELEASE_VERSION }}
         release_name: Release ${{env.RELEASE_VERSION }}
+        
+    - name: Read CHANGELOG.md
+      id: package
+      uses: juliangruber/read-file-action@v1
+      with:
+        path: ./CHANGELOG.md
+
+    - name: Write to CHANGELOG.md
+      uses: DamianReeves/write-file-action@master
+      with:
+        path: ./CHANGELOG.md
+        contents: ${{ steps.changelog.outputs.changelog }}${{ steps.package.outputs.content }}
+        write-mode: overwrite
+
+    - name: Commit and push CHANGELOG.md
+      uses: EndBug/add-and-commit@v7
+      with:
+        add: CHANGELOG.md
+        message: "chore: Update CHANGELOG.md"
+        branch: main  
+        
     - name: Archive site content
       uses: thedoctor0/zip-release@master
       with:
