--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,8 @@
-name: Release
-on: 
+name: Releases
+on:
   push:
-    tags:
-      - 'v*'
+    branches:
+      - main
 
 jobs:
   build:
@@ -55,14 +55,22 @@ jobs:
       with:
         name: assetDocuments
           
-    - name: create release
-      id: create-new-release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+    - name: conventional Changelog Action
+      id: changelog
+      uses: TriPSs/conventional-changelog-action@v3
       with:
-        tag_name: ${{ env.RELEASE_VERSION }}
-        release_name: Release ${{env.RELEASE_VERSION }}
+        github-token: ${{ secrets.github_token }}
+        version-file: "./package.json,./package-lock.json"
+
+    - name: create release
+      uses: actions/create-release@v1
+      if: ${{ steps.changelog.outputs.skipped == 'false' }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.github_token }}
+      with:
+        tag_name: ${{ steps.changelog.outputs.tag }}
+        release_name: ${{ steps.changelog.outputs.tag }}
+        body: ${{ steps.changelog.outputs.clean_changelog }}
     
     - name: Archive site content
       uses: thedoctor0/zip-release@master
