--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,16 +37,16 @@ jobs:
         junit_files: "report.xml"
         
     - name: create folder
-      run: mkdir downloads
+      run: mkdir testReports
     
     - name: move files
-      run: mv *.xml ./downloads
+      run: mv *.xml ./testReports
       
     - name: Upload document
       uses: actions/upload-artifact@v2
       with: 
         name: assetDocuments
-        path: downloads
+        path: testReports
         
     - name: Set environment version
       run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
@@ -100,7 +100,7 @@ jobs:
           Repository: ${{ github.repository }}
 
           See changes: https://github.com/${{ github.repository }}/commit/${{github.sha}}
-        document: downloads/report.xml
+        document: testReports/report.xml
         
     - name: send zip on push
       uses: appleboy/telegram-action@master
