--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,6 +36,9 @@ jobs:
       with:
         junit_files: "report.xml"
         
+    - name: remove folder
+      run: rm -rf downloads
+    
     - name: create folder
       run: mkdir downloads
     
